--- a/index2.html
+++ b/index2.html
@@ -34,7 +34,7 @@ var url = `https://nominatim.openstreetmap.org/search?q=${document.getElementByI
 // -----------------------------------------------
 
 const scriptElement = document.createElement('script');
-var data = [];
+var data = ["start"];
 
 // This is like a template for how to use the callback with the called function
 async function script_method(url, callback) {
