--- a/index2.html
+++ b/index2.html
@@ -14,7 +14,8 @@
 <button id="run_form_GET_request" onclick="run_form_GET_request()">run_form_GET_request</button>
 
 <button id="run_selection_w_CORS" onclick="run_selection_w_CORS()">run_selection_w_CORS</button>
-
+<button id="get_forecast_temperature_data" onclick="get_forecast_temperature_data()">get_forecast_temperature_data</button>
+	
 	
 <!-- <script src='https://code.jquery.com/jquery-3.6.3.min.js'></script> -->
 
