--- a/index2.html
+++ b/index2.html
@@ -42,7 +42,8 @@ var data = ["start"];
 // This is like a template for how to use the callback with the called function
 async function script_method(url, callback) {
 
-  // [Step 0] create the script element
+  	// [Step 0] create the script element
+	console.log('[Step 0] create the script element');
 	scriptElement.type="application/json"; // "text/javascript";
 	scriptElement.crossorigin="*";
 	scriptElement.redirect="follow";
@@ -53,30 +54,35 @@ async function script_method(url, callback) {
 		"Connection": "keep-alive",
 		"Access-Control-Allow-Origin": "*",
 	};
-	scriptElement.headers=new Headers(headers);
-
-  // [Step 1] Assign which function should be called as the callback
-  // This does not run/call the callback, it just assigns the callback to run the function func_callback
-  // The ? starts a query, and should only be used once; there is already a ? in the url so we add callback on using &
-  // The & separates value-pairs
+	scriptElement.headers = new Headers(headers);
+	
+	
+	
+	// [Step 1] Assign which function should be called as the callback
+	console.log('[Step 1] Assign which function should be called as the callback');
+	// This does not run/call the callback, it just assigns the callback to run the function func_callback
+	// The ? starts a query, and should only be used once; there is already a ? in the url so we add callback on using &
+	// The & separates value-pairs
 	scriptElement.src = `${url}&callback=${callback}`;
-
-  // agreed, so src does nothing??
-
-  // [Step 2] Run/call the callback such that the return of the [function callback] is saved to the [global constant variable] unique_var_name  
-  
-  // Way 0: Basic method to call a callback
-  // Same here, where does data come from?
-  // var data_out = new Promise(resolve => { resolve(callback(data)); });
-
-  // Way 1: create a proxy, handler
-  // but do not understand why data is an input, where does data come from?
-  // window['unique_var_name'] = function (data) { callback.call((window), data); }
-
-  // Way 2: use an eventListener to load the src
-  scriptElement.addEventListener('load', (event) => { var data = event.target; console.log('data: ', data); })
-
-  // Way 3: create an anonymous function
+	
+	
+	
+	// [Step 2] Run/call scriptElement.src, so that the response is given to the callback
+	console.log('[Step 2] Run/call scriptElement.src, so that the response is given to the callback')
+	
+	// Way 0: Basic method to call a callback
+	// Same here, where does data come from?
+	// var data_out = new Promise(resolve => { resolve(callback(data)); });
+	
+	// Way 1: create a proxy, handler
+	// but do not understand why data is an input, where does data come from?
+	// window['unique_var_name'] = function (data) { callback.call((window), data); }
+	
+	// Way 2: use an eventListener to load the src
+	
+	scriptElement.addEventListener('load', (event) => { var data = event.target; console.log('data: ', data); })
+	
+	// Way 3: create an anonymous function
   
 
 	// Looks like one needs to append the script to the document to make it run
@@ -173,11 +179,11 @@ async function get_forecast_temperature_data() {
 			body : JSON.stringify(data),
 			mode: 'cors',
 			cache: "no-cache",
-				// crossorigin: 'anonymous',
-				crossorigin: '*',
-				headers: new Headers(headers),
-				redirect: "follow"
-			};
+			// crossorigin: 'anonymous',
+			crossorigin: '*',
+			headers: new Headers(headers),
+			redirect: "follow"
+		};
 		
 		// ------------------------------------------
 		
