--- a/index2.html
+++ b/index2.html
@@ -72,15 +72,24 @@ async function script_method(url, callback) {
 	
 	// Way 0: Basic method to call a callback
 	// Same here, where does data come from?
-	// var data_out = new Promise(resolve => { resolve(callback(data)); });
+	var data_out = await new Promise(resolve => { resolve(callback(data)); });
+	console.log('data_out: ', data_out); 
+
+	// Way 0b: Add a pause before resolving the callback
+	// var data_out = new Promise(resolve => { setTimeout(resolve, 2000); resolve(callback(data)); });
+	// console.log('data_out: ', data_out); 
 	
 	// Way 1: create a proxy, handler
 	// but do not understand why data is an input, where does data come from?
 	// window['unique_var_name'] = function (data) { callback.call((window), data); }
 	
 	// Way 2: use an eventListener to load the src
-	
-	scriptElement.addEventListener('load', (event) => { var data = event.target; console.log('data: ', data); })
+	scriptElement.addEventListener('load', (event) => {
+		console.log('Inside eventlistener'); 
+		console.log('event: ', event); 
+		var data = event.target; 
+		console.log('data: ', data); 
+	})
 	
 	// Way 3: create an anonymous function
   
