--- a/index2.html
+++ b/index2.html
@@ -35,6 +35,7 @@ window.addEventListener('beforeunload', function() {
 // https://nominatim.openstreetmap.org/search?q=Lyon&format=json
 // https://raw.githubusercontent.com/CodeSolutions2/pdf_to_text_webapp/main/document_imagepdf.pdf
 var url = document.getElementById('url').value;
+console.log('url: ', url); 
 	
 // -----------------------------------------------
 
