--- a/index2.html
+++ b/index2.html
@@ -9,6 +9,8 @@
 
 <button id="run_script" onclick="run_script()">run_script</button>
 <button id="regular_fetch" onclick="regular_fetch()">regular_fetch</button>
+<button id="regular_fetch_blob" onclick="regular_fetch_blob()">regular_fetch_blob</button>
+	
 <button id="run_selection_w_JSONP" onclick="run_selection_w_JSONP()">run_selection_w_JSONP</button>
 	
 <button id="run_form_GET_request" onclick="run_form_GET_request()">run_form_GET_request</button>
