--- a/index2.html
+++ b/index2.html
@@ -331,7 +331,7 @@ async function fetch_CORS_POST(data) {
 	
 	return await fetch(url, options)
 		.then(response => response.json())
-		.then(async function(data) { console.log('data: ', data); return data; )
+		.then(async function(data) { console.log('data: ', data); return data; })
 		.catch(error => console.error("error: ", error));
 }
 	
